--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.15.4",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.14.1",
+    "mariadb": "^2.5.3",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.10",
     "typeorm": "0.2.32"
   },
